WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94280
Fix vsync-disabled Null pointer crash bug
https://bugs.webkit.org/show_bug.cgi?id=94280
Summary
Fix vsync-disabled Null pointer crash bug
John Bates
Reported
2012-08-16 18:12:18 PDT
Fix vsync-disabled Null pointer crash bug
Attachments
Patch
(1.52 KB, patch)
2012-08-16 18:13 PDT
,
John Bates
no flags
Details
Formatted Diff
Diff
Patch
(1.72 KB, patch)
2012-08-16 18:31 PDT
,
John Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Bates
Comment 1
2012-08-16 18:13:09 PDT
Created
attachment 158963
[details]
Patch
John Bates
Comment 2
2012-08-16 18:31:45 PDT
Created
attachment 158969
[details]
Patch
Kentaro Hara
Comment 3
2012-08-16 19:15:21 PDT
Comment on
attachment 158969
[details]
Patch Looks OK
WebKit Review Bot
Comment 4
2012-08-16 19:52:34 PDT
Comment on
attachment 158969
[details]
Patch Clearing flags on attachment: 158969 Committed
r125847
: <
http://trac.webkit.org/changeset/125847
>
WebKit Review Bot
Comment 5
2012-08-16 19:52:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug