Fix vsync-disabled Null pointer crash bug https://bugs.webkit.org/show_bug.cgi?id=94280

Patch by John Bates <jbates@google.com> on 2012-08-16
Reviewed by Kentaro Hara.

The m_timeSource member is NULL for vsync-disabled path, need to check for that.

Tests: Covered by Chromium throughput tests. All the compositor thread throughput tests are crashing.

* platform/graphics/chromium/cc/CCFrameRateController.cpp:
(WebCore::CCFrameRateController::setTimebaseAndInterval):

Canonical link: https://commits.webkit.org/112098@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125847 268f45cc-cd09-0410-ab3c-d52691b4dbfc